# coherax

./: .gitignore  CLAUDE.md  README.md  aggregated_results.ipynb  benchmark_codes_claude.py  demo.ipynb  floating_basis.ipynb  fock_fidelity_claude.py  pyproject.toml
coherax/: __init__.py  _fock.py  benchmark_low_gamma_claude.py  binary_tree_optimizer_claude.py  binary_tree_utils.py  characteristic_jax_utils.py  circuits.py  coherent_transpose_claude.py  coherent_tree_optimizer_claude.py  coherent_utils.py  depth_sweep_claude.py  extended_depth_sweep_claude.py  fidelity.py  fixedpoint_depth_sweep_claude.py  fixedpoint_objective_claude.py  fixedpoint_optimizer_claude.py  gkp.py  info.py  linalg_utils.py  lyapunov_optimizer_claude.py  multi_round_claude.py  multiround_optimizer_claude.py  operators.py  optimizers.py  recovery_optimizer_claude.py  sbs_fair_benchmark_claude.py  states.py  symbolic_utils.py  transpose_channel_claude.py  trotter_utils.py  utils.py  worstcase_optimizer_claude.py
docs/: conf.py  index.rst  quickstart.rst
gkp_utils/: analytic_utils.py  benchmark_claude.py  benchmark_cmaes_claude.py  benchmark_low_gamma_claude.py  binary_tree_optimizer_claude.py  coherent_transpose_claude.py  coherent_tree_optimizer_claude.py  coherent_utils.py  composite_optimizer_claude.py  continue_depth_sweep_claude.py  curriculum_optimizer_claude.py  deep_fixedpoint_claude.py  depth_sweep_claude.py  extended_depth_sweep_claude.py  fixedpoint_depth_sweep_claude.py  fixedpoint_objective_claude.py  fixedpoint_optimizer_claude.py  jax_analytic_utils.py  lyapunov_optimizer_claude.py  measurement_recovery_claude.py  (+16 more)
(+41 files in other folders)
